--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,20 @@ body{
 }
 header{
     width: 100%;
-    height: 120px;
+    height: 140px;
+}
+.logo{
+    display: inline;
+    
+}
+.title{
+    text-align: center;
+    padding-bottom: 100px;
+    
+}
+h2{
+    text-align: center;
+    padding-top: 30px;
 }
 main{
 height: 900px;;
@@ -22,8 +35,9 @@ footer{
 }
 #productimg{
     margin: 0;
+    padding-top: 90px;
     height: 400px;
-    width: 1100px;
+    width: 900px;
     float: right;
 }
 .randomtext{
@@ -31,16 +45,16 @@ footer{
 }
 #leftimage{
     height: 350px;
-    width: 350px;
+    width: 250px;
 }
 
 
 #centerimage{
     height: 350px;
-    width: 350px;
-    margin: 0px 20px;
+    width: 250px;
+    margin: 0px 50px;
 }
 #rightimage{
     height: 350px;
-    width: 350px;
+    width: 250px;
 }
