--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,24 @@ h2{
     padding-top: 30px;
 }
 main{
+    position: relative;
 height: 900px;;
 
 }
 footer{
     width: 100%;
-    height: 120px;
+    height: 80px;
 }
+
+#chart{
+    position: absolute;
+    display: inline-block;
+    width:950px;
+    height: 450px;
+    top: 450px;
+    left: 310px;
+}
+
 #results{
     display: inline-block;
     margin: 0;
